--- a/pages/network/ip_allocation.mdx
+++ b/pages/network/ip_allocation.mdx
@@ -1,20 +1,8 @@
+import { Callout } from 'nextra-theme-docs'
 import IpSubnetCalculator from 'ip-subnet-calculator'
 
-export const raw = [
-  {cidr: '10.0.0.0/24',     vlan: ''     , description: 'Gateway & Temporary zone for newly added'},
-  {cidr: '10.0.1.0/24',     vlan: '1'    , description: 'Network Components (ex. DNS)'},
-  {cidr: '10.0.16.0/24',    vlan: '16'   , description: 'Ubiquiti Network Devices'},
-  {cidr: '10.0.80.0/24',    vlan: '80'   , description: 'Internal Network for Proxmox Hosts'},
-  {cidr: '10.1.0.0/24',     vlan: '100'  , description: 'Residents Users'},
-  {cidr: '10.1.1.0/24',     vlan: '101'  , description: 'Nya Project Users'},
-  {cidr: '10.1.2.0/24',     vlan: '102'  , description: 'Multimedia Devices'},
-  {cidr: '10.1.3.0/24',     vlan: '103'  , description: 'Network Components (ex. DNS)'},
-  {cidr: '10.1.4.0/24',     vlan: '104'  , description: 'Guest Users'},
-  {cidr: '10.1.5.0/24',     vlan: '105'  , description: 'IoT Devices'},
-  
-]
-
-export const data = raw.map(item => {
+export function CidrTable({ cidrs }) {
+  const data = cidrs.map(item => {
     const ip = item.cidr.split('/')[0]
     const prefix = item.cidr.split('/')[1]
     const calc = IpSubnetCalculator.calculateSubnetMask(ip, prefix)
@@ -26,34 +14,79 @@ export const data = raw.map(item => {
       vlan: item.vlan,
       description: item.description
     }
-  }
-)
+  })
+  return (
+    <table>
+      <thead>
+        <tr>
+          <th>CIDR</th>
+          <th>IP Start</th>
+          <th>IP End</th>
+          <th>Subnet Mask</th>
+          <th>VLAN</th>
+          <th>Description</th>
+        </tr>
+      </thead>
+      <tbody>
+        {
+          data.map(item => (
+            <tr key={item.cidr}>
+              <td>{item.cidr}</td>
+              <td>{item.start}</td>
+              <td>{item.end}</td>
+              <td>{item.mask}</td>
+              <td>{item.vlan}</td>
+              <td>{item.description}</td>
+            </tr>
+          ))
+        }
+      </tbody>
+    </table>
+  )
+}
+
+export const network = [
+  {cidr: '10.0.0.0/24',     vlan: '',      description: 'Gateway & Temporary zone for newly added clients'},
+  {cidr: '10.0.1.0/24',     vlan: '1',     description: 'Ubiquiti Network Devices'},
+  {cidr: '10.0.32.0/24',    vlan: '32',    description: 'Network Components (ex. DNS)'}
+]
+
+export const users = [
+  {cidr: '10.1.0.0/24',     vlan: '100',   description: 'In-Home Users'},
+  {cidr: '10.1.1.0/24',     vlan: '101',   description: 'Nya Project Users'},
+  {cidr: '10.1.2.0/24',     vlan: '103',   description: 'Guest Users'},
+  {cidr: '10.1.16.0/24',    vlan: '116',   description: 'Multimedia Devices'},
+  {cidr: '10.1.17.0/24',    vlan: '117',   description: 'IoT Devices'}
+]
+
+export const mdc = [
+  {cidr: '10.2.0.0/24',     vlan: '200',   description: 'MDC Network Devices'},
+  {cidr: '10.2.1.0/24',     vlan: '201',   description: 'Proxmox Hosts'},
+  {cidr: '10.2.8.0/24',     vlan: '202',   description: 'Network Attached Storages'},
+  {cidr: '10.2.64.0/24',    vlan: '264',   description: 'Proxmox Virtual Machines'}
+]
 
 # IP Allocation
 
-<table>
-  <thead>
-    <tr>
-      <th>CIDR</th>
-      <th>IP Start</th>
-      <th>IP End</th>
-      <th>Subnet Mask</th>
-      <th>VLAN</th>
-      <th>Description</th>
-    </tr>
-  </thead>
-  <tbody>
-    {
-      data.map(item => (
-        <tr key={item.cidr}>
-          <td>{item.cidr}</td>
-          <td>{item.start}</td>
-          <td>{item.end}</td>
-          <td>{item.mask}</td>
-          <td>{item.vlan}</td>
-          <td>{item.description}</td>
-        </tr>
-      ))
-    }
-  </tbody>
-</table>
+## Network related components
+
+<Callout type="info">
+  CIDR: 10.0.0.0/16
+</Callout>
+<CidrTable cidrs={network} />
+
+## User area
+
+<Callout type="info">
+  CIDR: 10.1.0.0/16
+</Callout>
+<CidrTable cidrs={users} />
+
+## Mini datacenter (MDC)
+
+<Callout type="info">
+  CIDR: 10.2.0.0/16
+</Callout>
+<CidrTable cidrs={mdc} />
+
+
