--- a/pages/network/ip_allocation.mdx
+++ b/pages/network/ip_allocation.mdx
@@ -56,7 +56,8 @@ export const network = [
   {cidr: '10.0.0.0/24',     vlan: '',      gateway: 'UDR',                description: 'Temporary zone for newly added clients'},
   {cidr: '10.0.1.0/24',     vlan: '1',     gateway: 'Sophos XG',          description: 'Routers'},
   {cidr: '10.0.2.0/24',     vlan: '2',     gateway: 'UDR',                description: 'Ubiquiti Network Devices'},
-  {cidr: '10.0.32.0/24',    vlan: '32',    gateway: 'VyOS',               description: 'Network Components (ex. DNS)'}
+  {cidr: '10.0.32.0/24',    vlan: '32',    gateway: 'VyOS',               description: 'Network Virtual Components (ex. DNS)'},
+  {cidr: '10.0.40.0/24',    vlan: '40',    gateway: 'VyOS',               description: 'Internal Service Proxies'}
 ]
 
 <Callout type="info">
@@ -85,7 +86,8 @@ export const mdc = [
   {cidr: '10.2.0.0/24',     vlan: '200',   gateway: 'USW-Enterprise-8',   description: 'MDC Network Devices'},
   {cidr: '10.2.1.0/24',     vlan: '201',   gateway: 'USW-Enterprise-8',   description: 'Proxmox Hosts'},
   {cidr: '10.2.8.0/24',     vlan: '202',   gateway: 'USW-Enterprise-8',   description: 'Network Attached Storages'},
-  {cidr: '10.2.32.0/24',    vlan: '232',   gateway: 'USW-Enterprise-8',   description: 'Proxmox Virtual Machines'}
+  {cidr: '10.2.32.0/24',    vlan: '232',   gateway: 'USW-Enterprise-8',   description: 'Proxmox Virtual Machines'},
+  {cidr: '10.2.33.0/24',    vlan: '233',   gateway: 'USW-Enterprise-8',   description: 'Proxmox Docker Containers'}
 ]
 
 <Callout type="info">
