add spare network

--- a/pages/network/ip_allocation.mdx
+++ b/pages/network/ip_allocation.mdx
@@ -98,7 +98,8 @@ export const mdc = [
 ## Persistent Private Networks
 
 export const priv = [
-  {cidr: '172.22.0.0/24',     vlan: '200',   gateway: 'USW-Enterprise-8',   description: 'Proxmox Hosts'}
+  {cidr: '172.22.0.0/24',     vlan: '4000',   gateway: 'USW-Enterprise-8',   description: 'Proxmox Hosts'},
+  {cidr: '172.22.32.0/22',    vlan: '4032',   gateway: 'UDR',                description: 'Spare network for failover'}
 ]
 
 <Callout type="info">
