--- a/pages/network/ip_allocation.mdx
+++ b/pages/network/ip_allocation.mdx
@@ -85,7 +85,8 @@ export const users = [
 export const mdc = [
   {cidr: '10.2.0.0/24',     vlan: '200',   gateway: 'USW-Enterprise-8',   description: 'MDC Network Devices'},
   {cidr: '10.2.1.0/24',     vlan: '201',   gateway: 'USW-Enterprise-8',   description: 'Proxmox Hosts'},
-  {cidr: '10.2.8.0/24',     vlan: '202',   gateway: 'USW-Enterprise-8',   description: 'Network Attached Storages'},
+  {cidr: '10.2.2.0/24',     vlan: '202',   gateway: 'USW-Enterprise-8',   description: 'SoCs'},
+  {cidr: '10.2.8.0/24',     vlan: '208',   gateway: 'USW-Enterprise-8',   description: 'Network Attached Storages'},
   {cidr: '10.2.32.0/24',    vlan: '232',   gateway: 'USW-Enterprise-8',   description: 'Proxmox Virtual Machines'},
   {cidr: '10.2.33.0/24',    vlan: '233',   gateway: 'USW-Enterprise-8',   description: 'Proxmox Docker Containers'}
 ]
