--- a/pages/network/ip_allocation.mdx
+++ b/pages/network/ip_allocation.mdx
@@ -88,7 +88,8 @@ export const mdc = [
   {cidr: '10.2.2.0/24',     vlan: '202',   gateway: 'USW-Enterprise-8',   description: 'SoCs'},
   {cidr: '10.2.8.0/24',     vlan: '208',   gateway: 'USW-Enterprise-8',   description: 'Network Attached Storages'},
   {cidr: '10.2.32.0/24',    vlan: '232',   gateway: 'USW-Enterprise-8',   description: 'Proxmox Virtual Machines'},
-  {cidr: '10.2.33.0/24',    vlan: '233',   gateway: 'USW-Enterprise-8',   description: 'Proxmox Docker Containers'}
+  {cidr: '10.2.33.0/24',    vlan: '233',   gateway: 'USW-Enterprise-8',   description: 'Proxmox Docker Containers'},
+  {cidr: '10.2.34.0/24',    vlan: '234',   gateway: 'USW-Enterprise-8',   description: 'Kubernetes Nodes'}
 ]
 
 <Callout type="info">
