--- a/pages/network/ip_allocation.mdx
+++ b/pages/network/ip_allocation.mdx
@@ -72,7 +72,7 @@ export const network = [
 
 export const dmz = [
   {cidr: '10.1.0.0/24',     vlan: '100',   gateway: 'UDM-SE',             description: 'Firewalls'},
-  {cidr: '10.1.16.0/24',    vlan: '116',   gateway: 'UDM-SE',             description: 'L4/L7 Reverse Proxies'},
+  {cidr: '10.1.16.0/24',    vlan: '116',   gateway: 'UDM-SE',             description: 'L4/L7 Reverse Proxies'}
 ]
 
 <Callout type="info">
@@ -104,7 +104,7 @@ export const mdc = [
   {cidr: '10.3.3.0/24',     vlan: '303',   gateway: 'USW-Enterprise-8',   description: 'Network Attached Storages'},
   {cidr: '10.3.32.0/24',    vlan: '332',   gateway: 'USW-Enterprise-8',   description: 'Kubernetes Nodes'}
   {cidr: '10.3.64.0/24',    vlan: '364',   gateway: 'USW-Enterprise-8',   description: 'Proxmox Virtual Machines'},
-  {cidr: '10.3.65.0/24',    vlan: '365',   gateway: 'USW-Enterprise-8',   description: 'Synology Docker Containers'},
+  {cidr: '10.3.65.0/24',    vlan: '365',   gateway: 'USW-Enterprise-8',   description: 'Synology Docker Containers'}
 ]
 
 <Callout type="info">
