add missing comma

--- a/pages/network/ip_allocation.mdx
+++ b/pages/network/ip_allocation.mdx
@@ -102,7 +102,7 @@ export const mdc = [
   {cidr: '10.3.1.0/24',     vlan: '301',   gateway: 'USW-Enterprise-8',   description: 'Hypervisors'},
   {cidr: '10.3.2.0/24',     vlan: '302',   gateway: 'USW-Enterprise-8',   description: 'Small Board Devices'},
   {cidr: '10.3.3.0/24',     vlan: '303',   gateway: 'USW-Enterprise-8',   description: 'Network Attached Storages'},
-  {cidr: '10.3.32.0/24',    vlan: '332',   gateway: 'USW-Enterprise-8',   description: 'Kubernetes Nodes'}
+  {cidr: '10.3.32.0/24',    vlan: '332',   gateway: 'USW-Enterprise-8',   description: 'Kubernetes Nodes'},
   {cidr: '10.3.64.0/24',    vlan: '364',   gateway: 'USW-Enterprise-8',   description: 'Proxmox Virtual Machines'},
   {cidr: '10.3.65.0/24',    vlan: '365',   gateway: 'USW-Enterprise-8',   description: 'Synology Docker Containers'}
 ]
