add game servers

--- a/pages/network/ip_allocation.mdx
+++ b/pages/network/ip_allocation.mdx
@@ -72,7 +72,8 @@ export const network = [
 
 export const dmz = [
   {cidr: '10.1.0.0/24',     vlan: '100',   gateway: 'UDM-SE',             description: 'Firewalls'},
-  {cidr: '10.1.16.0/24',    vlan: '116',   gateway: 'UDM-SE',             description: 'L4/L7 Reverse Proxies'}
+  {cidr: '10.1.16.0/24',    vlan: '116',   gateway: 'UDM-SE',             description: 'L4/L7 Reverse Proxies'},
+  {cidr: '10.1.64.0/24',    vlan: '164',   gateway: 'UDM-SE',             description: 'Game Servers'}
 ]
 
 <Callout type="info">
